# M-Finlogs

./: .gitignore  Check-System.ps1  INSTALLATION_CHECKLIST.md  OTA_UPDATE_RUNBOOK.md  QUICK_START.md  README.md  REQUIREMENTS.md  SETUP_GUIDE.md  appveyor.yml  backend.py  config.py  convert-to-bmp.ps1  dev-app-update.yml  generate-installer-graphics.js  index.css  index.html  latest-downloaded.yml  main.js  package-lock.json  package.json  preload.js  renderer.js  requirements.txt  setup.html  splash.html  tmp_preview_check.py
.agents/tasks/task-phases-5-10-threading-reports-parity/features/: FEAT-001.json
.github/workflows/: build-windows.yml  desktop-build.yml  electron-build.yml  native-windows-build.yml  native-windows.yml  release-ota.yml
MFinlogs.Desktop/: MFinlogs.Desktop.sln  README.md  UI_FEATURES.md
MFinlogs.Desktop/Installer/: setup.iss
MFinlogs.Desktop/MFinlogs.Desktop/: AutoUpdater.cs  GlobalHotkey.cs  MFinlogs.Desktop.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs  ProtocolHandler.cs  SetupForm.cs  SplashForm.cs  TrayManager.cs  appsettings.json
MFinlogs.Desktop/MFinlogs.Desktop/Config/: AppConfig.cs
MFinlogs.Desktop/MFinlogs.Desktop/LocalServer/: LocalApiServer.cs  SqliteDb.cs
MFinlogs.Desktop/MFinlogs.Desktop/Properties/: launchSettings.json
MFinlogs.Desktop/MFinlogs.Desktop/Sync/: SyncEngine.cs
MFinlogs.Desktop/MFinlogs.Desktop/UI/: AnimationEngine.cs  DesignTokens.cs  ModernRenderer.cs
MFinlogs.Desktop/MFinlogs.Desktop/UI/Controls/: ModernButton.cs  ModernCheckBox.cs  ModernContextMenu.cs  ModernLoadingOverlay.cs  ModernRadioCard.cs  ModernStatusIndicator.cs  ModernTextBox.cs  ModernToast.cs
assets/: installer-header.html  installer-sidebar.html
bootstrapper/: package-lock.json
native/: CMakeLists.txt  README.md  vcpkg.json
native/docs/: AUDIT_REPORT.md  FEATURE_PARITY.md
native/installer/: build_installer.bat  setup.iss
native/qml/: AppShell.qml  AuroraBackground.qml  Button.qml  Checkbox.qml  ClosingReport.qml  DataTable.qml  DatePickerField.qml  DateRangePicker.qml  ErrorBanner.qml  FieldCombo.qml  FieldInput.qml  FocusRing.qml  GhostButton.qml  GlassPanel.qml  GlobalSearch.qml  IconButton.qml  LoadingOverlay.qml  LoginView.qml  Main.qml  MetricCard.qml  NavButton.qml  PrimaryButton.qml  SectionHeader.qml  ShortcutOverlay.qml  Sparkline.qml  StaggerEntrance.qml  StatusPill.qml  Switch.qml  TBody.qml  TCaption.qml  TDisplay.qml  THeading.qml  TMono.qml  TOverline.qml  TSmall.qml  TTiny.qml  TTitle.qml  Theme.qml  ToastHost.qml
native/qml/pages/: AuditPage.qml  CreditFollowupPage.qml  CreditLedgerPage.qml  DailyEntryPage.qml  DailySummaryPage.qml  DashboardPage.qml  DayBookPage.qml  InventoryPage.qml  LedgerPage.qml  OutstandingPage.qml  PartiesPage.qml  PlaceholderPage.qml  ProfitLossPage.qml  SettingsPage.qml  TrialBalancePage.qml
native/resources/: app.rc  native_resources.qrc
native/src/: main.cpp
native/src/app/: AppContext.cpp  AppContext.h  ApplicationMode.h  AuthWindow.cpp  AuthWindow.h  DesktopApplication.cpp  DesktopApplication.h  QmlApplication.cpp  QmlApplication.h  QmlBackend.cpp  QmlBackend.h  ServerApplication.cpp  ServerApplication.h  SplashScreen.cpp  SplashScreen.h  XlsxReader.cpp  XlsxReader.h
native/src/data/: ConfigService.cpp  ConfigService.h  ConnectionPool.cpp  ConnectionPool.h  MigrationService.cpp  MigrationService.h  PasswordVerifier.cpp  PasswordVerifier.h  SchemaInitializer.cpp  SchemaInitializer.h  SqlBusinessServices.cpp  SqlBusinessServices.h  SqlDatabase.cpp  SqlDatabase.h  SqliteBusinessServices.cpp  SqliteBusinessServices.h  SqliteSchemaInitializer.cpp  SqliteSchemaInitializer.h
native/src/domain/: BalanceCalculator.h  DomainErrors.h  ServiceInterfaces.h  ServiceRegistry.cpp  ServiceRegistry.h  Types.h
native/tests/: CMakeLists.txt  test_balance_calculator.cpp  test_qml_backend.cpp  test_sqlite_services.cpp
qt-ui/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  style.h
release/server-0.1.3/: README-SERVER.txt  db_config.json
scripts/: clean-packaging-output.ps1  close-packaging-processes.ps1  package-desktop.ps1  package-server.ps1  preflight-build.js
web/: .env.example  .gitignore  README.md  netlify.toml  next.config.ts  open-next.config.ts  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
web/prisma/: schema.prisma  seed.ts
web/public/: _headers  manifest.json  sw.js
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(dashboard)/: layout.tsx  page.tsx
web/src/app/(dashboard)/audit/: page.tsx
web/src/app/(dashboard)/daily-entry/: page.tsx
web/src/app/(dashboard)/import/: page.tsx
web/src/app/(dashboard)/inventory/: page.tsx
web/src/app/(dashboard)/journal/: page.tsx
web/src/app/(dashboard)/parties/: page.tsx
web/src/app/(dashboard)/settings/: page.tsx
web/src/app/(dashboard)/statement/: page.tsx
web/src/app/(dashboard)/year-end/: page.tsx
web/src/app/api/activity/: route.ts
web/src/app/api/audit/: route.ts
web/src/app/api/branches/: route.ts
web/src/app/api/cash-in-hand/: route.ts
web/src/app/api/companies/: route.ts
web/src/app/api/dashboard/: route.ts
web/src/app/api/day-lock/: route.ts
web/src/app/api/events/: route.ts
web/src/app/api/users/: route.ts
web/src/components/: activity-feed.tsx  breadcrumbs.tsx  edit-transaction-modal.tsx  full-screen-wrapper.tsx  header.tsx  mobile-nav.tsx  notification-bell.tsx  online-status.tsx  presence-indicator.tsx  session-guard.tsx  shortcuts-panel.tsx  sidebar.tsx  top-nav.tsx
web/src/components/ui/: animated-number.tsx  animated-row.tsx  badge.tsx  button.tsx  card.tsx  command-palette.tsx  confirm-dialog.tsx  data-table.tsx  empty-state.tsx  input.tsx  metric-card.tsx  select.tsx  skeleton.tsx  sparkline.tsx  toast.tsx
web/src/lib/: app-context.tsx  auth-guard.ts  auth.ts  csrf.ts  design-tokens.ts  export-excel.ts  export-pdf.ts  financial-year.ts  import-utils.ts  motion.ts  offline-queue.ts  themes.ts  undo-manager.ts  use-cached-fetch.ts  use-realtime.ts  utils.ts  validators.ts
(+47 files in other folders)
